# aquamine

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
ai/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json
ai/alerts/: __init__.py  notifications.py  state_machine.py
ai/anomaly/: __init__.py  detector.py  scoring.py
ai/chatbot/: __init__.py  cerebras_client.py  knowledge_base.py  orchestrator.py  tools.py
ai/chatbot/data/: amd.md  regulations.md  water_chemistry.md
ai/cv/: __init__.py  detector.py
ai/data_generator/: __init__.py  generator.py  synthetic.py
ai/dataset/yellow-boy-detection.v2i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
ai/db/: __init__.py  connection.py  models.py
ai/forecasting/: __init__.py  forecaster.py  timegpt_client.py
ai/iot/: config.py  mqtt_bridge.py  sensor_listener.py
ai/notifications/: service.py
ai/realtime/: __init__.py  websocket.py
ai/schemas/: __init__.py  alert.py  alerts.py  anomaly.py  base.py  cv.py  forecast.py  help.py  sensor.py  settings.py
ai/scripts/: build_kb.py  init_db.py  seed_data.py
ai/tests/: conftest.py  test_alerts.py  test_alerts_api.py  test_anomaly.py  test_anomaly_api.py  test_api.py  test_cv_api.py  test_data_generator.py  test_db_connection.py  test_e2e.py  test_forecast_api.py  test_forecasting.py  test_help_api.py  test_integration.py  test_models.py  test_mqtt_ingestion.py  test_notifications.py  test_settings_api.py  test_websocket.py
ai/utils/: responses.py
(+354 files in other folders)
