[project]
name = "aquamine-ai"
version = "0.1.0"
description = "AquaMine AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.0",
    "redis>=5.0.8",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
