[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aquamine-ai"
version = "0.1.0"
description = "AquaMine AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cerebras_cloud_sdk>=1.0.0",
    "fastapi>=0.115.0",
    "nixtla>=0.6.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "resend>=2.0.0",
    "sqlalchemy>=2.0.32",
    "ultralytics>=8.4.7",
    "uvicorn[standard]>=0.30.6",
]

[tool.setuptools]
py-modules = ["ai"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.3",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
